[gd_scene load_steps=2 format=2]

[ext_resource path="res://data/Environment/Water.gd" type="Script" id=2]

[node name="Water" type="Area2D"]
collision_layer = 32
collision_mask = 25
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Water_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Water_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Water_body_exited"]
